--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
     </div>
 
     <div class="icons">
-      <a href="https://github.com/gagal18"><i class="fab fa-github-square fa-2x"></i></a>
+      <a href="https://github.com/gagal18"><i class="fab fa-github fa-2x"></i></a>
       <a href="https://www.facebook.com/bojan.gagaleski"><i class="fab fa-facebook-f fa-2x"></i></a>
-      <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
-      <a href="https://www.instagram.com/gagaleski_/"><i class="fab fa-instagram-square fa-2x"></i></a>
+      <a href="https://www.instagram.com/gagaleski_/"><i class="fab fa-instagram fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/bojan-gagaleski-318922197/"><i class="fab fa-linkedin fa-2x"></i></a>
-         <a href="https://www.facebook.com/bojan.gagaleski"><i class="fab fa-facebook-square fa-2x"></i></a>
     </div>
     </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
