--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </div>
     </nav>
-    <div class="body">
+    <div class="body fade-in">
     <div class="container2">
       <h1>Hello everyone</h1>
       <h2>I'm Bojan and this is my portfolio</h2>
@@ -51,7 +51,6 @@
       <span>|WordPress developer|</span>
     </div>
     </div>
-
     <div class="icons">
       <a href="https://github.com/gagal18"><i class="fab fa-github fa-2x"></i></a>
       <a href="https://www.facebook.com/bojan.gagaleski"><i class="fab fa-facebook-f fa-2x"></i></a>
